--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Vitae Blog
-SEOTitle: 你的博客 | Your Blog
+title: Vitae's Blog
+SEOTitle: 赵志成的博客 | Vitae Blog
 header-img: img/home-bg.jpg
 email: 505788057@qq.com
 description: "Welcome to my Blog."
@@ -11,12 +11,12 @@ url: "https://505788057.github.io"              # your host, for absolute URL
 
 
 # SNS settings
-RSS: false
-weibo_username:     赵志成成成
-zhihu_username:     huxpro
+# RSS: false
+weibo_username:     vitaee
+zhihu_username:     vitaee
 github_username:    505788057
-#twitter_username:  huxpro
-facebook_username:  huxpro
+# twitter_username:  huxpro
+# facebook_username:  huxpro
 
 
 
@@ -52,7 +52,7 @@ kramdown:
 # Duoshuo settings
 duoshuo_username: huxblog
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
@@ -68,7 +68,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "没有最好的文案，只有最喜欢的人。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -85,16 +85,16 @@ friends: [
         title: "Hux Blog",
         href: "http://huangxuan.me"
     },{
-        title: "Foo",
+        title: "How",
         href: "#"
     },{
-        title: "Bar",
+        title: "Can",
         href: "#"
     },{
-        title: "Example Friends",
+        title: "I",
         href: "#"
     },{
-        title: "It helps SEO",
+        title: "Know",
         href: "#"
     }
 ]
