--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: vitaee
-# zhihu_username: vitaee
-github_username: 505788057
+#weibo_username: vitaee
+#zhihu_username: 505788057
+#github_username: 505788057
 # twitter_username:  huxpro
 # facebook_username:  huxpro
 
@@ -56,11 +56,6 @@ kramdown:
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
-
-# Duoshuo settings
-duoshuo_username: huxblog
-# Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
