upadate the info.

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ future: true
 RSS: false
 #weibo_username: vitaee
 #zhihu_username: 505788057
-#github_username: 505788057
+github_username: 505788057
 # twitter_username:  huxpro
 # facebook_username:  huxpro
 
