--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ future: true
 
 # SNS settings
 RSS: false
-#weibo_username: vitaee
-#zhihu_username: 505788057
+weibo_username: vitaee
+zhihu_username: 505788057
 github_username: 505788057
 # twitter_username:  huxpro
 # facebook_username:  huxpro
